Single page and Home page connection made it also database connection established

--- a/Web/Views/Shared/_Footer.cshtml
+++ b/Web/Views/Shared/_Footer.cshtml
@@ -4,7 +4,7 @@
 <aside id="colorlib-aside" role="complementary" class="js-fullheight">
     <nav id="colorlib-main-menu" role="navigation">
         <ul>
-            <li class="colorlib-active"><a href="index.html">Ana Sayfa</a></li>
+            <li class="colorlib-active"><a href="~/Home/index">Ana Sayfa</a></li>
             <li><a href="fashion.html">Magazin</a></li>
             <li><a href="travel.html">Gezi</a></li>
             <li><a href="about.html">Hakkında</a></li>
