--- a/Web/Views/Shared/_Layout.cshtml
+++ b/Web/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
     
     
     
-    @Html.Partial("_Footer")
+    @Html.Partial("_Header")
     
     <!-- END COLORLIB-ASIDE -->
        @RenderBody()
