--- a/Web/Views/Home/Index.cshtml
+++ b/Web/Views/Home/Index.cshtml
@@ -11,14 +11,14 @@
                         {
                             <div class="col-md-12">
                                 <div class="blog-entry ftco-animate d-md-flex">
-                                    <a href="~/Single/index/@i.id" class="img img-2" style="background-image: url(@i.resimUrl)"></a>
+                                    <a href="~/Single/index/@i.id" class="img img-2" style="background-image: url(../@i.resimUrl)"></a>
                                     <div class="text text-2 pl-md-4">
                                         <h3 class="mb-2"><a href="~/Single/index/@i.id">@i.baslik</a></h3>
                                         <div class="meta-wrap">
                                             <p class="meta">
                                                 <span><i class="icon-calendar mr-2"></i>@i.UploDateTime.Value.Day/@i.UploDateTime.Value.Month/@i.UploDateTime.Value.Year</span>
                                                 
-                                                        <span><a href="~/Single/index"><i class="icon-folder-o mr-2"></i>@i.kategori</a></span>
+                                                        <span><a><i class="icon-folder-o mr-2"></i>@i.kategori</a></span>
                                                   
 
 
