--- a/Web/Views/Shared/_Header.cshtml
+++ b/Web/Views/Shared/_Header.cshtml
@@ -5,15 +5,15 @@
     <nav id="colorlib-main-menu" role="navigation">
         <ul>
             <li class="colorlib-active"><a href="~/Home/index">Ana Sayfa</a></li>
-            <li><a href="fashion.html">Magazin</a></li>
-            <li><a href="travel.html">Gezi</a></li>
+            <li><a href="">Magazin</a></li>
+            <li><a href="~/Travel/index">Gezi</a></li>
             <li><a href="about.html">Hakkında</a></li>
             <li><a href="contact.html">İletişim</a></li>
         </ul>
     </nav>
 
     <div class="colorlib-footer">
-        <h1 id="colorlib-logo" class="mb-4"><a href="index.html" style="background-image: url(images/bg_1.jpg);">Takım <span>1</span></a></h1>
+        <h1 id="colorlib-logo" class="mb-4"><a href="index.html" style="background-image: url(../images/bg_1.jpg);">Takım <span>1</span></a></h1>
         <div class="mb-4">
             <h3>Bültene abone olun</h3>
             <form action="#" class="colorlib-subscribe-form">
