--- a/Web/Views/Shared/_Header.cshtml
+++ b/Web/Views/Shared/_Header.cshtml
@@ -5,9 +5,9 @@
     <nav id="colorlib-main-menu" role="navigation">
         <ul>
             <li class="colorlib-active"><a href="~/Home/index">Ana Sayfa</a></li>
-            <li><a href="">Magazin</a></li>
+            <li><a href="~/Fashion/index">Magazin</a></li>
             <li><a href="~/Travel/index">Gezi</a></li>
-            <li><a href="about.html">Hakkında</a></li>
+            <li><a href="~/About/index">Hakkında</a></li>
             <li><a href="contact.html">İletişim</a></li>
         </ul>
     </nav>
