Last Pages added

--- a/Web/Views/Shared/_Header.cshtml
+++ b/Web/Views/Shared/_Header.cshtml
@@ -8,7 +8,8 @@
             <li><a href="~/Fashion/index">Magazin</a></li>
             <li><a href="~/Travel/index">Gezi</a></li>
             <li><a href="~/About/index">Hakkında</a></li>
-            <li><a href="contact.html">İletişim</a></li>
+            <li><a href="~/Add/index">Makale Ekle</a></li>
+            <li><a href="~/Register/index">Kayıt Ol</a></li>
         </ul>
     </nav>
 
