Register Page Finished with controller and In article add section image adding will in next commit

--- a/Web/Views/About/Index.cshtml
+++ b/Web/Views/About/Index.cshtml
@@ -1,18 +1,56 @@
-﻿<div id="colorlib-main">
-			<section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
-	    	<div class="container-fluid px-0">
-	    		<div class="row d-flex">
-	    			<div class="col-md-6 d-flex">
-                        <div class="img d-flex align-self-stretch align-items-center js-fullheight" style="background-image:url(../images/about.jpg);">
-                        </div>
-	    			</div>
-	    			<div class="col-md-6 d-flex align-items-center">
-	    				<div class="text px-4 pt-5 pt-md-0 px-md-4 pr-md-5 ftco-animate">
-		            <h2 class="mb-4">I'm <span>Andrea Moore</span> a Scotish Blogger &amp; Explorer</h2>
-		            <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
-	            </div>
-		        </div>
-	        </div>
-	    	</div>
-	    </section>
-		</div>
+﻿
+
+<div id="colorlib-main">
+    <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
+        <div class="container-fluid px-0">
+            <div class="row d-flex">
+                <div class="col-md-6 d-flex">
+                    <div class="img d-flex align-self-stretch align-items-center js-fullheight" style="background-image:url(../images/Beko.jpg);">
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex align-items-center">
+                    <div class="text px-4 pt-5 pt-md-0 px-md-4 pr-md-5 ftco-animate">
+                        <h2 class="mb-4">Ben <span>Beko Zımbo</span> bir Niğdeli 51 Blogger &amp; Gezici</h2>
+                        <p>Ankara'da yaşayan bir Niğdeli... Size inanılmaz gezi anılarımı anlatıp burda beraber patates yemeyi planlıyorum.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+<div id="colorlib-main">
+    <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
+        <div class="container-fluid px-0">
+            <div class="row d-flex">
+                <div class="col-md-6 d-flex">
+                    <div class="img d-flex align-self-stretch align-items-center js-fullheight" style="background-image:url(../images/Prima.jpg);">
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex align-items-center">
+                    <div class="text px-4 pt-5 pt-md-0 px-md-4 pr-md-5 ftco-animate">
+                        <h2 class="mb-4">Ben <span>Tunç Gürsoy</span> bir Ordulee Animeci Blogger &amp; Gezici</h2>
+                        <p>Ankara'da yaşayan bir Orudlee. Anime izlerim her yeri de gezerim.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+<div id="colorlib-main">
+    <section class="ftco-about img ftco-section ftco-no-pt ftco-no-pb" id="about-section">
+        <div class="container-fluid px-0">
+            <div class="row d-flex">
+                <div class="col-md-6 d-flex">
+                    <div class="img d-flex align-self-stretch align-items-center js-fullheight" style="background-image:url(../images/Denqza1.jpg);">
+                    </div>
+                </div>
+                <div class="col-md-6 d-flex align-items-center">
+                    <div class="text px-4 pt-5 pt-md-0 px-md-4 pr-md-5 ftco-animate">
+                        <h2 class="mb-4">Ben <span>Deniz Dumanlı</span> bir Ankaralı Yemek Seven Blogger &amp; Gezici</h2>
+                        <p>Türkiye'nin her yerinden güzel yemek yerleriyle karşınızda olacağım.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
