--- a/Web/Views/Add/Index.cshtml
+++ b/Web/Views/Add/Index.cshtml
@@ -1,4 +1,22 @@
 ﻿@model ModelMakaleAdd
+
+<script>
+
+    // seçilen file bu methoda gönderilir
+    function resimDegisti(item) {
+        if (item.files && item.files[0]) {
+            var reader = new FileReader();
+            reader.onload = function (e) {
+                $("#myImage").attr("src", e.target.result);
+            };
+            reader.readAsDataURL(item.files[0]);
+        }
+    }
+
+    function setUrl() {
+        document.getElementById("btnImageFile").click();
+    }
+</script>
 <div id="colorlib-main">
     <section class="ftco-section contact-section px-md-4">
         <div class="container">
@@ -11,7 +29,7 @@
             </div>
             <div class="row block-9">
                 <div class="col-lg-12 d-flex">
-                    <form asp-controller="Add" asp-action="Index" class="bg-light p-5 contact-form" method="post">
+                    <form asp-controller="Add" asp-action="Index" class="bg-light p-5 contact-form" method="post" enctype="multipart/form-data">
                         <div class="form-group">
                             @Html.TextBoxFor(model => Model.email,new {@class="form-control" ,@type="text",@placeholder="Email Giriniz"})
                         </div>
@@ -24,7 +42,7 @@
                         </div>
                         <div class="form-group">
                             @Html.TextAreaFor(model=>model.icerik,20,30,new{@class="form-control", @placeholder = "İçerik" })
-                            
+
                         </div>
                         <div class="input-group mb-3 mx-3">
                             <div class="rs-select2 js-select-simple select--no-search">
@@ -34,9 +52,14 @@
                                     new SelectListItem("Gezi","1",false,false),
                                     new SelectListItem("Magazin","2",false,false)
                                 },null,new{@name= "tür"})
-                                
                                 <div class="select-dropdown"></div>
+
                             </div>
+                        </div>
+                        <div class="form-group">
+                            <input onchange="resimDegisti(this)"
+                                   accept="image/x-png,image/gif,image/jpeg"
+                                   id="btnImageFile" type="file" asp-for="resimurl"  value="Resim Ekle" />
                         </div>
 
                         <div class="form-group">
