Bug fix in fashion to single page

--- a/Web/Views/Fashion/Index.cshtml
+++ b/Web/Views/Fashion/Index.cshtml
@@ -1,41 +1,58 @@
 ﻿@model ModelMakaleIndex
+
 <div id="colorlib-main">
-    <section class="ftco-section">
+    <section class="ftco-section ftco-no-pt ftco-no-pb">
         <div class="container">
-            <div class="row px-md-4">
-                @foreach (var i in @Model.liste){
+            <div class="row d-flex">
+                <div class="col-xl-8 px-md-5 py-5">
+                    <div class="row pt-md-4">
+                        @foreach (var i in Model.liste)
+                        {
+                            <div class="col-md-12">
 
-                    <div class="col-md-12">
-                        <div class="blog-entry ftco-animate d-md-flex">
-                            <a href="~/Single/index/@i.id" class="img img-2" style="background-image: url(../@i.resimUrl)"></a>
-                            <div class="text text-2 pl-md-4">
-                                <h3 class="mb-2"><a href="~/Single/index/@i.id">@i.baslik</a></h3>
-                                <div class="meta-wrap">
-                                    <p class="meta">
-                                        <span><i class="icon-calendar mr-2"></i>@i.UploDateTime.Value.Day/@i.UploDateTime.Value.Month/@i.UploDateTime.Value.Year</span>
-                                        <span><a href="~/Single/index/@i.id"><i class="icon-folder-o mr-2"></i>@i.etiket</a></span>
-                                        <span><i class="icon-comment2 mr-2"></i>@i.yorumSayisi Yorum</span>
-                                    </p>
+                                <div class="blog-entry-2 ftco-animate">
+                                    <a href="~/Single/index/@i.id" class="img" style="background-image: url(../@i.resimUrl)"></a>
+                                    <div class="text pt-4">
+                                        <h3 class="mb-4"><a href="~/Single/index/@i.id">@i.baslik</a></h3>
+                                        <p class="mb-4">
+                                            @if (i.aciklama.Length < 300)
+                                            {
+                                            <p> @i.aciklama</p>
+                                        }
+                                        else
+                                        {
+                                            <p>
+                                                @i.aciklama.Substring(0, 300)
+                                                ...
+                                            </p>
+                                        }...</p>
+                                        <div class="author mb-4 d-flex align-items-center">
+                                            <div class="ml-3 info">
+                                                <span>Tarafından yazılmış</span>
+                                                <h3><a>@i.yazar</a>, <span>@i.UploDateTime.Value.Day/@i.UploDateTime.Value.Month/@i.UploDateTime.Value.Year</span></h3>
+                                            </div>
+                                        </div>
+                                        <div class="meta-wrap d-md-flex align-items-center">
+                                            <div class="half order-md-last text-md-right">
+                                                <p class="meta">
+
+                                                    <span><i class="icon-comment"></i>@i.yorumSayisi</span>
+                                                </p>
+                                            </div>
+                                            <div class="half">
+                                                <p><a href="~/Single/index/@i.id " class="btn btn-primary p-3 px-xl-4 py-xl-3">Okumaya Devam Edin</a></p>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <p class="mb-4">@if (i.aciklama.Length<200)
-                                                {
-                                                     @i.aciklama
-                                                }
-                                                else
-                                                {
-                                                     @i.aciklama.Substring(0, 200)
-                                                    
-                                                }...</p>
-                                <p><a href="~/Single/index/@i.id" class="btn-custom"><span class="ion-ios-arrow-forward"></span></a></p>
-                                <p><a href="~/Single/index/@i.id" class="btn-custom">Daha<span class="ion-ios-arrow-forward"></span></a></p>
                             </div>
-                        </div>
-                    </div>
-                }
-                
+                        }
 
+                    </div><!-- END-->
+
+                </div>
+                <!-- END COL -->
             </div>
-            
         </div>
     </section>
 </div>
