--- a/Web/Views/Single/Index.cshtml
+++ b/Web/Views/Single/Index.cshtml
@@ -5,7 +5,7 @@
             <div class="row d-flex">
                 <div class="col-lg-12 px-md-5 py-5">
                     <div class="row pt-md-4">
-                        <h1 class="mb-3">@Model.makale.baslik</h1>
+                        <h1 class="mb- 3 col-md-12">@Model.makale.baslik</h1>
                         <p>@Model.makale.aciklama</p>
                         <div class="tag-widget post-tag-container mb-5 mt-5 col-md-12">
                             <div class="tagcloud">
